--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Olio is a colofull app landing page template">
-    <meta name="author" content="ThemeEaster">
+    <meta name="description" content="AfroCab | Twende Official Website">
+    <meta name="author" content="AfroCab">
 
     <title>AfroCab | Twende!</title>
 
