--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="AfroCab | Twende Official Website">
-    <meta name="author" content="AfroCab">
+    <meta name="description" content="AfroCabs | Twende Official Website">
+    <meta name="author" content="AfroCabs">
 
-    <title>AfroCab | Twende!</title>
+    <title>AfroCabs | Twende!</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="img/logo.png">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
@@ -33,7 +34,7 @@
 <header id="header" class="header-section">
     <div class="container">
         <nav class="navbar">
-            <a href="#" class="navbar-brand"><img src="img/logo.png" alt="AfroCab" height="50px"></a>
+            <a href="#" class="navbar-brand"><img src="img/logo.png" alt="AfroCabs" height="50px"></a>
             <div class="d-flex menu-wrap">
                 <div id="navmenu" class="mainmenu">
                     <ul class="nav">
@@ -41,7 +42,7 @@
                                 class="sr-only">(current)</span></a></li>
                         <li><a data-scroll class="nav-link" href="#features">Features</a></li>
                         <li><a data-scroll class="nav-link" href="#pricing">Fleet</a></li>
-                        <li><a data-scroll class="nav-link" href="#reviews">Reviews</a></li>
+                        <!--li><a data-scroll class="nav-link" href="#reviews">Reviews</a></li-->
                         <li><a data-scroll class="nav-link" href="#contact">Contact</a></li>
                     </ul>
 
@@ -56,9 +57,9 @@
         <div class="row hero-inner">
             <div class="col-lg-9">
                 <div class="hero-content">
-                    <h1>AfroCab<br>Taxi & Courier</h1>
-                    <p>Experience the safe & friendly, affordable and convenient taxi and cab services through AfroCab
-                        App. <br>AfroCab is your ultimate designated driver.</p>
+                    <h1>AfroCabs<br>Taxi & Courier</h1>
+                    <p>Experience the safe & friendly, affordable and convenient taxi and cab services through AfroCabs
+                        App. <br>AfroCabs is your ultimate designated driver.</p>
                     <div class="hero-btn">
                         <table>
                             <tr>
@@ -90,7 +91,7 @@
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
                     <div class="icon"><i class="icon-adjustments"></i></div>
-                    <h3>Earn Money Driving with AfroCab</h3>
+                    <h3>Earn Money Driving with AfroCabs</h3>
                     <p>Work with your own schedule. No monthly fees, no minimum hours and no boss.</p>
                     <br>
                     <a href="#" class="pricing-btn">Driver App</a>
@@ -99,8 +100,8 @@
             </div>
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
-                    <div class="icon"><i class="icon-anchor"></i></div>
-                    <h3>AfroCab for Business</h3>
+                    <div class="icon"><i class="fab fa-taxi"></i></div>
+                    <h3>AfroCabs for Business</h3>
                     <p>Reliable rides for your employees. Lower cost for your business.</p>
                     <br>
                     <a href="#" class="pricing-btn">Get Started</a>
@@ -110,7 +111,7 @@
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
                     <div class="icon"><i class="icon-clock"></i></div>
-                    <h3>Ride With AfroCab</h3>
+                    <h3>Ride With AfroCabs</h3>
                     <p>There's always a reliable ride at your service to help run your errands or go to a night out.</p>
                     <br>
 
@@ -134,12 +135,12 @@
             </div>
             <div class="col-md-6 xs-padding">
                 <div class="content-details content-info">
-                    <h2>Why AfroCab?<br>Amazing features that set us apart.</h2>
+                    <h2>Why AfroCabs?<br>Amazing features that set us apart.</h2>
 
                     <ul class="check-list">
-                        <li><i class="fa fa-check"></i>From running your errands, to getting to work, or a night out with friends, AfroCab is your ultimate designated driver..</li>
+                        <li><i class="fa fa-check"></i>From running your errands, to getting to work, or a night out with friends, AfroCabs is your ultimate designated driver..</li>
                         <li><i class="fa fa-check"></i>You’re a click away to get to your destination. Just order your cab and we’ll be right with you!</li>
-                        <li><i class="fa fa-check"></i>Experience the safe & friendly, affordability and convenience with AfroCab. Our fleets are clean, well maintained and ensure that there are no breakdowns whatsoever.</li>
+                        <li><i class="fa fa-check"></i>Experience the safe & friendly, affordability and convenience with AfroCabs. Our fleets are clean, well maintained and ensure that there are no breakdowns whatsoever.</li>
                         <li><i class="fa fa-check"></i>Easy to download.</li>
                     </ul>
                 </div>
@@ -208,7 +209,7 @@
     </div>
 </section><!-- Pricing Section -->
 
-<section id="reviews" class="testimonial-section padding">
+<!--section id="reviews" class="testimonial-section padding">
     <div class="container">
         <div class="section-heading mb-60 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
             <h2>What People Say</h2>
@@ -250,24 +251,27 @@
             </div>
         </div>
     </div>
-</section>
+</section-->
 
 <div id="contact" class="subscribe-section padding">
     <div class="container text-center">
         <div class="subscribe-content">
-            <img class="logo wow fadeInUp" src="img/logo.png" height="50px" alt="logo" data-wow-delay="400ms" data-wow-duration="1000ms">
-            <p>Lorem Ipsum is simply text of the printing and typesetting industry. <br>It has survived not only five
-                centuries.</p>
+            <img class="logo wow fadeInUp" src="img/footerlogo.png" height="100px" alt="logo" data-wow-delay="400ms" data-wow-duration="1000ms">
+            <p>Got questions or concerns?</p>
         </div>
         <div class="subscribe-wrap">
             <form action="#" class="subscribe-form">
+                <input type="text" name="email" id="name" class="form_input"
+                       placeholder="Enter name" required>
                 <input type="email" name="email" id="subs-email" class="form_input"
-                       placeholder="Enter Your Email Address...">
-                <button type="submit" class="submit">Talk To Us</button>
+                       placeholder="Enter Your Email Address..." required>
+                <input type="text" name="email" id="message" class="form_input"
+                       placeholder="Enter Your Message..." required>
                 <div id="subscribe-result">
                     <p class="subscription-success"></p>
                     <p class="subscription-error"></p>
                 </div>
+                <button type="submit" class="submit">Send</button>
             </form>
         </div>
         <div class="clearfix"></div>
@@ -283,7 +287,7 @@
 
 <footer class="footer-section align-center">
     <div class="container">
-        <p>&copy; 2018 AfroCab.</p>
+        <p>&copy; 2018 AfroCabs.</p>
     </div>
 </footer>
 
