--- a/index.html
+++ b/index.html
@@ -23,10 +23,8 @@
     <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
-          integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-
     <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body data-spy="scroll" data-target="#navmenu" data-offset="70">
@@ -83,14 +81,14 @@
             <div class="hero-moc"></div>
         </div>
     </div>
-</section><!-- Hero Section -->
+</section>
 
 <section id="features" class="promo-section padding">
     <div class="container">
         <div class="promo-wrap row">
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
-                    <div class="icon"><i class="icon-adjustments"></i></div>
+                    <div class="icon"><i class="fas fa-taxi"></i></div>
                     <h3>Earn Money Driving with AfroCabs</h3>
                     <p>Work with your own schedule. No monthly fees, no minimum hours and no boss.</p>
                     <br>
@@ -100,7 +98,7 @@
             </div>
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
-                    <div class="icon"><i class="fab fa-taxi"></i></div>
+                    <div class="icon"><i class="fas fa-users"></i></div>
                     <h3>AfroCabs for Business</h3>
                     <p>Reliable rides for your employees. Lower cost for your business.</p>
                     <br>
@@ -110,7 +108,7 @@
             </div>
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
-                    <div class="icon"><i class="icon-clock"></i></div>
+                    <div class="icon"><i class="fas fa-route"></i></div>
                     <h3>Ride With AfroCabs</h3>
                     <p>There's always a reliable ride at your service to help run your errands or go to a night out.</p>
                     <br>
