--- a/index.html
+++ b/index.html
@@ -125,10 +125,7 @@
         <div class="row d-flex align-items-center content-wrap">
             <div class="col-md-6 xs-padding">
                 <div class="content-details">
-                    <img src="img/mockup-watch.png" alt="mockup">
-                    <div class="play-btn"><a class="img-popup" data-autoplay="true" data-vbtype="video"
-                                             href="https://www.youtube.com/watch?v=z8OWD3Bg1tQ"><i
-                            class="fa fa-play"></i></a></div>
+                    <img src="img/afroscreen.png" alt="mockup">
                 </div>
             </div>
             <div class="col-md-6 xs-padding">
