--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <header id="header" class="header-section">
     <div class="container">
         <nav class="navbar">
-            <a href="#" class="navbar-brand"><img src="img/logo.png" alt="AfroCabs" height="50px"></a>
+            <a href="#" class="navbar-brand"><img src="img/footerlogo.png" alt="AfroCabs" height="50px"></a>
             <div class="d-flex menu-wrap">
                 <div id="navmenu" class="mainmenu">
                     <ul class="nav">
@@ -286,7 +286,7 @@
     </div>
 </footer>
 
-<a data-scroll href="#header" id="scroll-to-top"><i class="arrow_carrot-up"></i></a>
+<a data-scroll href="#header" id="scroll-to-top"><i class="fas fa-angle-up"></i></a>
 <script src="js/vendor/jquery-1.12.4.min.js"></script>
 <script src="js/vendor/tether.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
