--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                 <div class="hero-content">
                     <h1>AfroCabs<br>Taxi & Courier</h1>
                     <p>Experience the safe & friendly, affordable and convenient taxi and cab services through AfroCabs
-                        App. <br>AfroCabs is your ultimate designated driver.</p>
+                        App. <br>AfroCabs is your ultimate designated taxi hailing app in Kenya.</p>
                     <div class="hero-btn">
                         <table>
                             <tr>
@@ -136,7 +136,7 @@
                         <li><i class="fa fa-check"></i>From running your errands, to getting to work, or a night out with friends, AfroCabs is your ultimate designated driver..</li>
                         <li><i class="fa fa-check"></i>You’re a click away to get to your destination. Just order your cab and we’ll be right with you!</li>
                         <li><i class="fa fa-check"></i>Experience the safe & friendly, affordability and convenience with AfroCabs. Our fleets are clean, well maintained and ensure that there are no breakdowns whatsoever.</li>
-                        <li><i class="fa fa-check"></i>Easy to download.</li>
+                        <li><i class="fa fa-check"></i>Best price guarantee.</li>
                     </ul>
                 </div>
             </div>
