--- a/index.html
+++ b/index.html
@@ -66,12 +66,12 @@
                             </td>
                             <td>
 
-                                <h3 class="rider">&nbsp;&nbsp;For Riders</h3>
+                                <h3 class="rider">For Riders</h3>
                             </td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="download-btn"><img src="img/appstore.png" alt="btn"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                                <td> &nbsp;<a href="#" class="download-btn"><img src="img/playstore.png" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/appstore.png" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/playstore.png" alt="btn"></a></td>
                             </tr>
                         </table>
 
@@ -155,7 +155,7 @@
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <div class="pricing-box middle text-center">
                     <div class="pricing-head">
-                        <img src="img/mini.png" alt="AfroMini">
+                        <img src="img/mini.png" alt="AfroMini" height="140px">
                         <h3>Mini</h3>
                     </div>
                     <ul class="pricing-info">
