--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                             </td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="download-btn"><img src="img/appstore.png" alt="btn"></a></td>
-                                <td><a href="#" class="download-btn"><img src="img/playstore.png" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/driver.png" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/rider.png" alt="btn"></a></td>
                             </tr>
                         </table>
 
@@ -155,7 +155,7 @@
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <div class="pricing-box middle text-center">
                     <div class="pricing-head">
-                        <img src="img/mini.png" alt="AfroMini" height="140px">
+                        <img src="img/mini.png" alt="AfroMini">
                         <h3>Mini</h3>
                     </div>
                     <ul class="pricing-info">
