--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                                 class="sr-only">(current)</span></a></li>
                         <li><a data-scroll class="nav-link" href="#features">Features</a></li>
                         <li><a data-scroll class="nav-link" href="#pricing">Fleet</a></li>
+                        <li><a data-scroll class="nav-link" href="#drivers">Drivers</a></li>
                         <!--li><a data-scroll class="nav-link" href="#reviews">Reviews</a></li-->
                         <li><a data-scroll class="nav-link" href="#contact">Contact</a></li>
                     </ul>
@@ -55,7 +56,7 @@
         <div class="row hero-inner">
             <div class="col-lg-9">
                 <div class="hero-content">
-                    <h1>AfroCabs<br>Taxi & Courier</h1>
+                    <h1>AfroCabs<br>Taxi &nbsp;& &nbsp;Transport</h1>
                     <p>Experience the safe & friendly, affordable and convenient taxi and cab services through AfroCabs
                         App. <br>AfroCabs is your ultimate designated taxi hailing app in Kenya.</p>
                     <div class="hero-btn">
@@ -204,6 +205,70 @@
     </div>
 </section><!-- Pricing Section -->
 
+<section class="testimonial-section padding" id="drivers">
+
+    <div class="container-fluid blue-bg">
+        <div class="container">
+            <h2 class="pb-3 pt-2">New driver onboarding</h2>
+            <!--first section-->
+            <div class="row align-items-center how-it-works">
+                <div class="col-2 text-center bottom">
+                    <div class="circle">1</div>
+                </div>
+                <div class="col-6">
+                    <h5>Getting started</h5>
+                    <p>Enter your email, phone, name and city of operation. </p>
+                </div>
+            </div>
+            <!--path between 1-2-->
+            <div class="row timeline">
+                <div class="col-2">
+                    <div class="corner top-right"></div>
+                </div>
+                <div class="col-8">
+                    <hr/>
+                </div>
+                <div class="col-2">
+                    <div class="corner left-bottom"></div>
+                </div>
+            </div>
+            <!--second section-->
+            <div class="row align-items-center justify-content-end how-it-works">
+                <div class="col-6 text-right">
+                    <h5>Upload the following</h5>
+                    <p>Clear Picture of yourself, Certificate of good conduct, ID,PIN, valid driving license,
+                        comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
+                        owner,inspection report, and proof of prior transport work.</p>
+                </div>
+                <div class="col-2 text-center full">
+                    <div class="circle">2</div>
+                </div>
+            </div>
+            <!--path between 2-3-->
+            <div class="row timeline">
+                <div class="col-2">
+                    <div class="corner right-bottom"></div>
+                </div>
+                <div class="col-8">
+                    <hr/>
+                </div>
+                <div class="col-2">
+                    <div class="corner top-left"></div>
+                </div>
+            </div>
+            <!--third section-->
+            <div class="row align-items-center how-it-works">
+                <div class="col-2 text-center top">
+                    <div class="circle">3</div>
+                </div>
+                <div class="col-6">
+                    <h5>Verification</h5>
+                    <p>Grab a coffee and wait for verification within the shortest time possible.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!--section id="reviews" class="testimonial-section padding">
     <div class="container">
         <div class="section-heading mb-60 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
@@ -282,7 +347,8 @@
 
 <footer class="footer-section align-center">
     <div class="container">
-        <p>&copy; 2018 AfroCabs.</p>
+        <p>&copy; 2018 AfroCabs. Powered by <a class="rider" href="http://wezadata.co.ke/" target="_blank">WezaData</a>
+        </p>
     </div>
 </footer>
 
