--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <h3>Earn Money Driving with AfroCabs</h3>
                     <p>Work with your own schedule. No monthly fees, no minimum hours and no boss.</p>
                     <br>
-                    <a href="#" class="pricing-btn">Driver App</a>
+                    <a href="#drivers" class="pricing-btn">Get Onboard</a>
                 </div>
 
             </div>
@@ -217,7 +217,7 @@
                 </div>
                 <div class="col-6">
                     <h5>Getting started</h5>
-                    <p>Enter your email, phone, name and city of operation. </p>
+                    <p>After installing the app, enter your email, phone number, name and city of operation. </p>
                 </div>
             </div>
             <!--path between 1-2-->
@@ -236,7 +236,7 @@
             <div class="row align-items-center justify-content-end how-it-works">
                 <div class="col-6 text-right">
                     <h5>Upload the following</h5>
-                    <p>Clear Picture of yourself, Certificate of good conduct, ID,PIN, valid driving license,
+                    <p>A clear picture of yourself, Certificate of Good Conduct, National ID,KRA PIN, Valid Driving License,
                         comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
                         owner,inspection report, and proof of prior transport work.</p>
                 </div>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="col-6">
                     <h5>Verification</h5>
-                    <p>Grab a coffee and wait for verification within the shortest time possible.</p>
+                    <p>Grab a coffee and wait for verification which will be done within the shortest time possible.</p>
                 </div>
             </div>
         </div>
@@ -297,14 +297,6 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only
                     five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
                 <div class="testi-footer">
-                    <img src="img/team-3.jpg" alt="profile">
-                    <h4>Jonathan Smith<span>Developer</span></h4>
-                </div>
-            </div>
-            <div class="testimonial-item">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only
-                    five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <div class="testi-footer">
                     <img src="img/team-4.jpg" alt="profile">
                     <h4>Taylor Swift<span>Programer</span></h4>
                 </div>
@@ -320,10 +312,10 @@
             <p>Got questions or concerns?</p>
         </div>
         <div class="subscribe-wrap">
-            <form action="#" class="subscribe-form">
+            <form action="#"  class="subscribe-form">
                 <input type="text" name="email" id="name" class="form_input"
                        placeholder="Enter name" required>
-                <input type="email" name="email" id="subs-email" class="form_input"
+                <input type="email" name="email" id="email" class="form_input"
                        placeholder="Enter Your Email Address..." required>
                 <input type="text" name="email" id="message" class="form_input"
                        placeholder="Enter Your Message..." required>
