--- a/index.html
+++ b/index.html
@@ -200,17 +200,16 @@
                         <li>Luggage: Excellent</li>
                     </ul>
                 </div>
-            </div><!-- Pricing 3 -->
+            </div>
         </div>
     </div>
-</section><!-- Pricing Section -->
+</section>
 
 <section class="testimonial-section padding" id="drivers">
 
     <div class="container-fluid blue-bg">
         <div class="container">
             <h2 class="pb-3 pt-2">New driver onboarding</h2>
-            <!--first section-->
             <div class="row align-items-center how-it-works">
                 <div class="col-2 text-center bottom">
                     <div class="circle">1</div>
@@ -220,7 +219,6 @@
                     <p>After installing the app, enter your email, phone number, name and city of operation. </p>
                 </div>
             </div>
-            <!--path between 1-2-->
             <div class="row timeline">
                 <div class="col-2">
                     <div class="corner top-right"></div>
@@ -232,7 +230,6 @@
                     <div class="corner left-bottom"></div>
                 </div>
             </div>
-            <!--second section-->
             <div class="row align-items-center justify-content-end how-it-works">
                 <div class="col-6 text-right">
                     <h5>Upload the following</h5>
@@ -244,7 +241,6 @@
                     <div class="circle">2</div>
                 </div>
             </div>
-            <!--path between 2-3-->
             <div class="row timeline">
                 <div class="col-2">
                     <div class="corner right-bottom"></div>
@@ -256,7 +252,6 @@
                     <div class="corner top-left"></div>
                 </div>
             </div>
-            <!--third section-->
             <div class="row align-items-center how-it-works">
                 <div class="col-2 text-center top">
                     <div class="circle">3</div>
@@ -312,7 +307,7 @@
             <p>Got questions or concerns?</p>
         </div>
         <div class="subscribe-wrap">
-            <form action="#"  class="subscribe-form">
+            <form id="chatForm" class="subscribe-form">
                 <input type="text" name="email" id="name" class="form_input"
                        placeholder="Enter name" required>
                 <input type="email" name="email" id="email" class="form_input"
@@ -328,11 +323,11 @@
         </div>
         <div class="clearfix"></div>
         <ul class="social-link">
-            <li><a href="#"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+            <li><a href="https://web.facebook.com/Afrocabs-334833670422418/"><i class="fab fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
             <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-skype"></i></a></li>
+            <li><a href="#"><i class="fab fa-phone-slash"></i></a></li>
         </ul>
     </div>
 </div>
@@ -345,7 +340,8 @@
 </footer>
 
 <a data-scroll href="#header" id="scroll-to-top"><i class="fas fa-angle-up"></i></a>
-
+<script src="https://www.gstatic.com/firebasejs/5.5.0/firebase.js"></script>
+<script src="js/formfire.js"></script>
 <script src="js/vendor/jquery-1.12.4.min.js"></script>
 <script src="js/vendor/tether.min.js"></script>
 <script src="js/vendor/bootstrap.min.js"></script>
