--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         <div class="row hero-inner">
             <div class="col-lg-9">
                 <div class="hero-content">
-                    <h1>AfroCabs<br>Taxi &nbsp;& &nbsp;Transport</h1>
-                    <p>Experience the safe & friendly, affordable and convenient taxi and cab services through AfroCabs
+                    <h1>AfroCabs<br>Taxi &nbsp;& &nbsp;Logistics.</h1>
+                    <p>Experience the safest & most friendly, affordable and convenient taxi and logistics services through AfroCabs
                         App. <br>AfroCabs is your ultimate designated taxi hailing app in Kenya.</p>
                     <div class="hero-btn">
                         <table>
@@ -90,8 +90,8 @@
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
                 <div class="promo-content text-center">
                     <div class="icon"><i class="fas fa-taxi"></i></div>
-                    <h3>Earn Money Driving with AfroCabs</h3>
-                    <p>Work with your own schedule. No monthly fees, no minimum hours and no boss.</p>
+                    <h3>Got a car? Drive with AfroCabs</h3>
+                    <p>The lowest company commission in Kenya at only <strong>10%</strong>. Earn more than ever before.</p>
                     <br>
                     <a href="#drivers" class="pricing-btn">Get Onboard</a>
                 </div>
@@ -327,7 +327,6 @@
             <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
             <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-            <li><a href="#"><i class="fab fa-phone-slash"></i></a></li>
         </ul>
     </div>
 </div>
