--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
 <footer class="footer-section align-center">
     <div class="container">
-        <p>&copy; 2018 AfroCabs. Powered by <a class="rider" href="http://wezadata.co.ke/" target="_blank">WezaData</a>
+        <p>&copy; 2018 AfroCabs | Powered by <a class="rider" href="http://wezadata.co.ke/" target="_blank">WezaData</a>
         </p>
     </div>
 </footer>
