--- a/index.html
+++ b/index.html
@@ -1,3 +1,252 @@
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <!doctype html>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="">
 <html class="no-js lt-ie9 lt-ie8" lang="">
@@ -35,13 +284,11 @@
             <a href="#" class="navbar-brand"><img src="img/footerlogo.png" alt="AfroCabs" height="50px"></a>
             <div class="d-flex menu-wrap">
                 <div id="navmenu" class="mainmenu">
-                    <ul class="nav">
-                        <li><a data-scroll class="nav-link active" href="#home">Home <span
-                                class="sr-only">(current)</span></a></li>
-                        <li><a data-scroll class="nav-link" href="#features">Features</a></li>
+                    <ul class="nav vanish">
+                        <li><a data-scroll class="nav-link active" href="#home">Home <span class="sr-only">(current)</span></a></li>
+                        <li><a data-scroll class="nav-link " href="#features">Features</a></li>
                         <li><a data-scroll class="nav-link" href="#pricing">Fleet</a></li>
                         <li><a data-scroll class="nav-link" href="#drivers">Drivers</a></li>
-                        <!--li><a data-scroll class="nav-link" href="#reviews">Reviews</a></li-->
                         <li><a data-scroll class="nav-link" href="#contact">Contact</a></li>
                     </ul>
 
@@ -49,7 +296,7 @@
             </div>
         </nav>
     </div>
-</header> <!-- Header -->
+</header>
 
 <section id="home" class="hero-section">
     <div class="container">
@@ -131,13 +378,15 @@
             </div>
             <div class="col-md-6 xs-padding">
                 <div class="content-details content-info">
-                    <h2>Why AfroCabs?<br>Amazing features that set us apart.</h2>
+                    <h2>Why AfroCabs?<br>Amazing benefits you can expect.</h2>
 
                     <ul class="check-list">
                         <li><i class="fa fa-check"></i>From running your errands, to getting to work, or a night out with friends, AfroCabs is your ultimate designated driver..</li>
                         <li><i class="fa fa-check"></i>You’re a click away to get to your destination. Just order your cab and we’ll be right with you!</li>
                         <li><i class="fa fa-check"></i>Experience the safe & friendly, affordability and convenience with AfroCabs. Our fleets are clean, well maintained and ensure that there are no breakdowns whatsoever.</li>
                         <li><i class="fa fa-check"></i>Best price guarantee.</li>
+                        <li><i class="fa fa-check"></i>Company only charges 10% commission on drivers.</li>
+
                     </ul>
                 </div>
             </div>
