--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
             <a href="#" class="navbar-brand"><img src="img/footerlogo.png" alt="AfroCabs" height="50px"></a>
             <div class="d-flex menu-wrap">
                 <div id="navmenu" class="mainmenu">
-                    <ul class="nav vanish">
+                    <ul class="nav">
                         <li><a data-scroll class="nav-link active" href="#home">Home <span class="sr-only">(current)</span></a></li>
                         <li><a data-scroll class="nav-link " href="#features">Features</a></li>
                         <li><a data-scroll class="nav-link" href="#pricing">Fleet</a></li>
@@ -318,8 +318,8 @@
                             </td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="download-btn"><img src="img/driver.png" alt="btn"></a></td>
-                                <td><a href="#" class="download-btn"><img src="img/rider.png" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/driver.svg" height="50%" alt="btn"></a></td>
+                                <td><a href="#" class="download-btn"><img src="img/rider.svg" alt="btn" height="50%" ></a></td>
                             </tr>
                         </table>
 
@@ -513,42 +513,6 @@
         </div>
     </div>
 </section>
-<!--section id="reviews" class="testimonial-section padding">
-    <div class="container">
-        <div class="section-heading mb-60 text-center wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1000ms">
-            <h2>What People Say</h2>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>It has survived not only
-                five centuries.</p>
-        </div>
-        <div id="testimonial-carousel" class="testimonial-carousel owl-carousel">
-            <div class="testimonial-item">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only
-                    five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <div class="testi-footer">
-                    <img src="img/team-1.jpg" alt="profile">
-                    <h4>Michel Brown<span>Marketer</span></h4>
-                </div>
-            </div>
-            <div class="testimonial-item">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only
-                    five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <div class="testi-footer">
-                    <img src="img/team-2.jpg" alt="profile">
-                    <h4>Angelina Rose<span>Designer</span></h4>
-                </div>
-            </div>
-            <div class="testimonial-item">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. It has survived not only
-                    five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-                <div class="testi-footer">
-                    <img src="img/team-4.jpg" alt="profile">
-                    <h4>Taylor Swift<span>Programer</span></h4>
-                </div>
-            </div>
-        </div>
-    </div>
-</section-->
-
 <div id="contact" class="subscribe-section padding">
     <div class="container text-center">
         <div class="subscribe-content">
@@ -574,7 +538,7 @@
         <ul class="social-link">
             <li><a href="https://web.facebook.com/Afrocabs-334833670422418/"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-google-plus"></i></a></li>
+            <li><a href="#"><i class="fab fa-mail-reply-all"></i></a></li>
             <li><a href="#"><i class="fab fa-instagram"></i></a></li>
         </ul>
     </div>
