--- a/index.html
+++ b/index.html
@@ -538,8 +538,7 @@
         <ul class="social-link">
             <li><a href="https://web.facebook.com/Afrocabs-334833670422418/"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-mail-reply-all"></i></a></li>
-            <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
         </ul>
     </div>
 </div>
