--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@
                             </td>
                             </tr>
                             <tr>
-                                <td><a href="#" class="download-btn"><img src="img/driver.svg" height="50%" alt="btn"></a></td>
-                                <td><a href="#" class="download-btn"><img src="img/rider.svg" alt="btn" height="50%" ></a></td>
+                                <td><a href="https://i.diawi.com/95UWG8" class="download-btn"><img src="img/driver.svg" height="50%" alt="btn"></a></td>
+                                <td><a href="https://i.diawi.com/AMT3HF" class="download-btn"><img src="img/rider.svg" alt="btn" height="50%"></a>
+                                </td>
                             </tr>
                         </table>
 
@@ -361,12 +362,12 @@
                     <p>There's always a reliable ride at your service to help run your errands or go to a night out.</p>
                     <br>
 
-                    <a href="#" class="pricing-btn">Rider App</a>
+                    <a href="https://i.diawi.com/AMT3HF" class="pricing-btn">Rider App</a>
                 </div>
-            </div><!-- Promo-3 -->
+            </div>
         </div>
     </div>
-</section><!-- Promo Section -->
+</section>
 
 <section class="content-section bg-grey padding">
     <div class="container">
@@ -417,7 +418,7 @@
                         <li>Luggage: Good</li>
                     </ul>
                 </div>
-            </div><!-- Pricing 1 -->
+            </div>
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1000ms">
                 <div class="pricing-box middle text-center">
                     <div class="pricing-head">
@@ -433,7 +434,7 @@
                         <li>Luggage: Good</li>
                     </ul>
                 </div>
-            </div><!-- Pricing 2 -->
+            </div>
             <div class="col-md-4 col-sm-6 sm-padding wow fadeInUp" data-wow-delay="400ms" data-wow-duration="1000ms">
                 <div class="pricing-box middle text-center">
                     <div class="pricing-head">
