--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
                     <h5>Upload the following</h5>
                     <p>A clear picture of yourself, Certificate of Good Conduct, National ID,KRA PIN, Valid Driving License,
                         comprehensive insurance cover, Sacco member number, copy of logbook, PIN and ID of
-                        owner,inspection report, and proof of prior transport work.</p>
+                        owner,inspection report, and proof of prior transport work, front & lateral photo of vehicle.</p>
                 </div>
                 <div class="col-2 text-center full">
                     <div class="circle">2</div>
@@ -522,11 +522,11 @@
         </div>
         <div class="subscribe-wrap">
             <form id="chatForm" class="subscribe-form">
-                <input type="text" name="email" id="name" class="form_input"
+                <input type="text" name="name" id="name" class="form_input"
                        placeholder="Enter name" required>
                 <input type="email" name="email" id="email" class="form_input"
                        placeholder="Enter Your Email Address..." required>
-                <input type="text" name="email" id="message" class="form_input"
+                <input type="text" name="message" id="message" class="form_input"
                        placeholder="Enter Your Message..." required>
                 <div id="subscribe-result">
                     <p class="subscription-success"></p>
@@ -539,7 +539,7 @@
         <ul class="social-link">
             <li><a href="https://web.facebook.com/Afrocabs-334833670422418/"><i class="fab fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/afrocabs"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fas fa-envelope"></i></a></li>
+            <li><a href="mailto:hello@afrocabs.com"><i class="fas fa-envelope"></i></a></li>
         </ul>
     </div>
 </div>
